--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,12 @@ input{
 
 .activeButton{
     display: inline-block;
+    color: white;
+    background-color: transparent;
+    border: 2px solid #0099CC;
+    border-radius: 5px;
+    text-transform: uppercase;
+    margin: 10px;
 }
 
 
