--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,12 @@ input{
     color: #fff;
     transition: ease 0.3s all;
 }
+.main__hero. navbar__menu .menu__link  {
+  padding:  1m;
+  font-weight: bold;
+  text-decoration: none;
+  color: #000;
+}
 
 /* Header Styles */
 .page__header {
