--- a/css/styles.css
+++ b/css/styles.css
@@ -94,10 +94,10 @@ input{
     flex-wrap:wrap;
     justify-content :left;
     top: 0;
-    background-color: darkred;
+    background-color: rgb(255,255,255);
     z-index: 5;
 }
-.main__hero .navbar__menu.fix-nav ul {
+.main__hero .navbar__menu.fix-nav li {
 background-color: green;
 }
 
@@ -128,13 +128,11 @@ background-color: green;
     transition: ease 0.3s all;
 }
 
+.main__hero .navbar__menu .menu__link.activeNav {
 
-
-
-.main__hero nav.navbar__menu.fix-nav  {
-
-    background-color: green;
+    color: red;
 }
+
 
 
 /* Header Styles */
